--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "php": ">=5.4.0",
         "illuminate/support": "~4"
     },
+    "require-dev": {
+    	"orchestra/testbench": "2.2.*"
+	},
     "autoload": {
         "psr-0": {
             "Way\\Form": "src/"
