--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-    "name": "way/form",
+    "name": "dlcrush/form",
     "description": "Make form handling in Laravel simpler.",
     "keywords": ["laravel", "forms"],
     "authors": [
         {
-            "name": "Jeffrey Way",
-            "email": "jeffrey@jeffrey-way.com"
+            "name": "David Crush",
+            "email": "dlcrush@mail.roanoke.edu"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4"
+        "illuminate/support": "~5"
     },
     "require-dev": {
     	"orchestra/testbench": "2.2.*"
 	},
     "autoload": {
         "psr-0": {
-            "Way\\Form": "src/"
+            "dlcrush\\Form": "src/"
         }
     },
     "minimum-stability": "dev",
